--- a/spring-api/env/docker-compose.yml
+++ b/spring-api/env/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
     mysql:
-        image: mysql:5.7
+        build: ./mysql
         environment:
             MYSQL_DATABASE: test
             MYSQL_USER: test
